Rename, constant update

--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
 	"description": "",
 	"main": "vite.config.js",
 	"type": "module",
-	"dependencies": {
-		"rollup-plugin-copy": "^3.5.0",
-		"rollup-plugin-rename": "^1.0.1",
-		"rollup-plugin-replace": "^2.2.0",
-		"rollup-plugin-url": "^3.0.1",
-		"rollup-pluginutils": "^2.8.2",
-		"vite": "^5.1.6"
-	},
+	"dependencies": {},
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"zip": "node bundle.js"
 	},
 	"devDependencies": {
+		"vite": "^5.1.6",
+		"dir-archiver": "^2.1.0",
 		"sass": "^1.72.0"
 	},
 	"keywords": [],
