--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "hasan/events-calender",
+	"name": "hasan/events-calendar",
 	"description": "A WordPress calender event plugin.",
 	"type": "wordpress-plugin",
 	"license": "GPLv2",
